--- a/css/styles.css
+++ b/css/styles.css
@@ -19,3 +19,123 @@ body{
 img{
     max-width: 100%;
 }
+
+/*Inicio de Index Page*/
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.header{
+    background-image: url(../assets/img/bg.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    min-height: 80vh;
+    padding: 80px 0;
+}
+
+.menu{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo{
+    color:#38b000;
+    font-size: 35px;
+    font-weight: bold;
+    text-transform: capitalize;
+}
+
+.menu .navbar ul li{
+    position: relative;
+    float: left;
+}
+
+.menu .navbar ul li a{
+    font-size: 20px;
+    padding: 10px;
+    color: #70e000;
+    font-weight:bold;
+    display: block;
+}
+nav a.active, nav a:hover {
+    background: linear-gradient(to right, #88e5ff, #006c8a);
+    transition: 0.5s;
+    padding: 9px;
+    border-radius: 20px;
+    }
+
+nav.navbar ul li a:hover{
+        color: #FFFFFF;
+    }
+
+#menu{
+    display: none;
+}
+
+.menu-icono{
+    width: 25px;
+}
+
+.menu label{
+    cursor: pointer;
+    display: none;
+}
+
+.header-content{
+    display: flex;
+}
+
+.header-text{
+    flex-basis: 50%;
+}
+
+.header-txt h1{
+    font-size: 60px;
+    color: #FFFFFF;
+    text-transform: capitalize;
+    font-weight: bolder;
+    line-height: 1.3;
+    margin-bottom: 25px;
+}
+
+.header-txt span{
+    color: #38b000;
+}
+
+.header-txt p{
+    font-size: 20px;
+    color: #E0E0E0;
+    font-weight: bolder;
+    margin-bottom: 45px;
+}
+
+.buttons{
+    display: flex;
+}
+
+.btn-1, .btn-2, .btn-3{
+    display: inline-block;
+    padding: 11px 35px;
+    border: 2px solid #70e000;
+    border-radius: 25px;
+    margin-right: 25px;
+    font-size: 17px;
+    font-weight: 600;
+    color: #FFFFFF;
+}
+
+.btn-1:hover {
+    background-color: #38b000;
+    transition: 0.3s;
+    padding: 20px;
+    border-radius: 30px;
+}
