--- a/css/styles.css
+++ b/css/styles.css
@@ -318,3 +318,30 @@ h3{
     transform: translateY(-10px);
     transition: all ease 0.3s;
 }
+
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 0;
+}
+
+.link ul{
+    display: flex;
+}
+
+.link ul li > a{
+    font-size: 17px;
+    font-weight: bold;
+    color: #FFFFFF;
+    margin-right: 20px;
+}
+
+.link a.active, .link a:hover {
+    background: linear-gradient(to right, #00c9ff, #92fe2D);
+    transition: 0.5s;
+    padding: 9px;
+    border-radius: 20px;
+    }
+
+/*Final de Index Page*/
