--- a/css/main.css
+++ b/css/main.css
@@ -10,5 +10,13 @@
   font-family: Montserrat;
   src: url(../assets/fonts/Montserrat-VariableFont_wght.ttf);
 }
+body {
+  font-family: "Montserrat", sans-serif;
+  background-color: #023047;
+}
+
+img {
+  max-width: 100%;
+}
 
 /*# sourceMappingURL=main.css.map */
