--- a/scss/base/_typo.scss
+++ b/scss/base/_typo.scss
@@ -1,6 +1,6 @@
 body{
-    font-family: "Montserrat", sans-serif;
-    background-color: #023047;
+    font-family: $font-family;
+    background-color: $color-background-primary;
 }
 
 img{
