--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,4 +1,4 @@
 @font-face{
-    font-family: Montserrat;
+    font-family: "Montserrat";
     src: url(../assets/fonts/Montserrat-VariableFont_wght.ttf);
 }
