--- a/css/main.css
+++ b/css/main.css
@@ -310,4 +310,28 @@ h3 {
   transition: all ease 0.3s;
 }
 
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 50px 0;
+}
+
+.link ul {
+  display: flex;
+}
+.link ul li > a {
+  font-size: 17px;
+  font-weight: bold;
+  color: #FFFFFF;
+  margin-right: 20px;
+}
+
+.link a.active, .link a:hover {
+  background: linear-gradient(to right, #00c9ff, #92fe2D);
+  transition: 0.5s;
+  padding: 9px;
+  border-radius: 20px;
+}
+
 /*# sourceMappingURL=main.css.map */
