--- a/css/main.css
+++ b/css/main.css
@@ -343,4 +343,104 @@ h3 {
   color: #38b000;
 }
 
+.blog-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0px;
+  flex-wrap: wrap;
+}
+
+.blog-box {
+  width: 350px;
+  background-color: #FFFFFF;
+  border: 1px solid #ececec;
+  box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.5);
+  transition: all 500ms ease-out;
+  margin: 20px;
+}
+.blog-box:hover {
+  transform: scale(1.1);
+}
+
+.blog-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.blog-txt {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+}
+.blog-txt span {
+  color: #38b000;
+  font-size: 0.9rem;
+}
+.blog-txt .blog-title {
+  font-size: 1.3rem;
+  font-weight: 500;
+  color: #272727;
+}
+.blog-txt .blog-title:hover {
+  color: #f33c3c;
+  transition: all ease 0.3s;
+}
+
+.blog-txt p {
+  color: #9b9b9b;
+  font-size: 0.9rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 20px 0px;
+}
+
+.blog-txt a {
+  color: #0f0f0f;
+}
+
+.blog-txt a:hover {
+  color: #92fe2D;
+  transition: all ease 0.3s;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
+.field {
+  padding: 10px 20px;
+  background-color: #FFFFFF;
+  border-radius: 25px;
+  margin-right: 15px;
+  border: 1px solid #e8e8e8;
+  outline: none;
+  margin-bottom: 10px;
+}
+
+.form-content {
+  padding: 100px 0 70px 0;
+  text-align: center;
+}
+.form-content h2 {
+  font-size: 40px;
+  line-height: 90px;
+}
+.form-content .submit {
+  display: inline-block;
+  padding: 13px 45px;
+  font-size: 18px;
+  background-color: #92fe2D;
+  color: #FFFFFF;
+  border-radius: 25px;
+  border: 0;
+  cursor: pointer;
+}
+
 /*# sourceMappingURL=main.css.map */
