--- a/css/main.css
+++ b/css/main.css
@@ -310,6 +310,68 @@ h3 {
   transition: all ease 0.3s;
 }
 
+@media (max-width: 991px) {
+  /*Home and Info pages*/
+  .menu {
+    padding: 20px;
+  }
+  .menu label {
+    display: initial;
+  }
+  .menu .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background-color: #023047;
+    display: none;
+  }
+  .menu .navbar ul li a:hover {
+    color: #FFFFFF;
+  }
+  .menu .navbar ul li {
+    width: 100%;
+    text-align: center;
+  }
+  #menu:checked ~ .navbar {
+    display: initial;
+  }
+  .header {
+    min-height: 0vh;
+    padding: 80px 30px 50px 30px;
+  }
+  .header-txt {
+    text-align: center;
+    flex-basis: 100%;
+  }
+  .header-txt h1 {
+    font-size: 50px;
+    margin-bottom: 15px;
+  }
+  .buttons {
+    justify-content: center;
+  }
+  .top {
+    display: none;
+  }
+  .product {
+    padding: 30px;
+  }
+  .product-content {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 30px;
+  }
+  .product-1 img {
+    width: 100%;
+  }
+  .footer {
+    flex-direction: column;
+    text-align: center;
+  }
+  .link ul {
+    margin-top: 20px;
+  }
+}
 .footer {
   display: flex;
   justify-content: space-between;
@@ -343,6 +405,68 @@ h3 {
   color: #38b000;
 }
 
+@media (max-width: 991px) {
+  /*Home and Info pages*/
+  .menu {
+    padding: 20px;
+  }
+  .menu label {
+    display: initial;
+  }
+  .menu .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background-color: #023047;
+    display: none;
+  }
+  .menu .navbar ul li a:hover {
+    color: #FFFFFF;
+  }
+  .menu .navbar ul li {
+    width: 100%;
+    text-align: center;
+  }
+  #menu:checked ~ .navbar {
+    display: initial;
+  }
+  .header {
+    min-height: 0vh;
+    padding: 80px 30px 50px 30px;
+  }
+  .header-txt {
+    text-align: center;
+    flex-basis: 100%;
+  }
+  .header-txt h1 {
+    font-size: 50px;
+    margin-bottom: 15px;
+  }
+  .buttons {
+    justify-content: center;
+  }
+  .top {
+    display: none;
+  }
+  .product {
+    padding: 30px;
+  }
+  .product-content {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 30px;
+  }
+  .product-1 img {
+    width: 100%;
+  }
+  .footer {
+    flex-direction: column;
+    text-align: center;
+  }
+  .link ul {
+    margin-top: 20px;
+  }
+}
 .blog-container {
   display: flex;
   justify-content: center;
@@ -443,6 +567,11 @@ h3 {
   cursor: pointer;
 }
 
+@media (max-width: 991px) {
+  .blog-box {
+    width: 300px;
+  }
+}
 .contact-container {
   display: grid;
   grid-template-columns: repeat(2, 50%);
@@ -591,6 +720,20 @@ h3 {
   }
   20%, 40%, 60%, 80% {
     transform: translateX(10px);
+  }
+}
+@media (max-width: 991px) {
+  .contact-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .contact-info {
+    gap: 15px;
+  }
+  .contact-info > h1 {
+    font-size: 1.5rem;
   }
 }
 
