--- a/scss/views/_contact.scss
+++ b/scss/views/_contact.scss
@@ -149,3 +149,20 @@
     10%, 30%, 50%, 70%, 90% {transform: translateX(-10px);} 
     20%, 40%, 60%, 80% {transform: translateX(10px);} 
 }
+
+@media (max-width:991px){
+    .contact-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap:20px;
+    }
+
+    .contact-info {
+        gap:15px;
+    }
+
+    .contact-info > h1 {
+        font-size: 1.5rem;
+    }
+}
